# mesh_viewer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: twindow.hpp
libs/: CMakeLists.txt  get_glew-2.1.0_win32.cmake
src/: main_ply.cpp  main_spheres.cpp  main_window.cpp  twindow.cpp  widget_data.hpp
src/tucanow/src/: misc.cpp  scene.cpp
win32-libs/: CMakeLists.txt  get_glfw-3.2.1_win32.cmake  get_glfw-3.3_win32.cmake
